2009-09-30  Sancho Lerena <slerena@artica.es>

	* pandora_server.spec: A complete uninstall for RPM. Database
	is not killed because user could be just uninstalling one of
	multiple servers and drop it will not be funny :-)

2009-09-28  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Config.pm: Updatged build.

	* lib/PandoraFMS/Core.pm: Added new macro fields for alerts:
	id_agent, alert_priority, alert name and module name. Also
	fixed a problem in macro substitution when recursive fields
	was used.  

2009-09-25  Sancho Lerena <slerena@artica.es>

	* pandora_server.spec: Some fixes to SUSE RPM.

	* conf/pandora_server.conf: Added some missing default values

	* lib/PandoraFMS/Config.pm: Added some missing default values.

	* util/tentacle_serverd, util/pandora_server: SUSE rc.status 
	addon. Need working, SUSE continues giving erratic problems inn
	startup :(

2009-09-22  Sancho Lerena <slerena@artica.es>

	* pandora_server_installer: Fixes some problems detecting Linux 
	(was skipping tentacle installation).

	* util/tentacle_serverd: Fixed some problems starting tentacle
	because short timeout after starting and because the unquoted grep.

 	* util/pandora_server: Incresed sleep time on start.

2009-09-21  Evi Vanoost <vanooste@rcbi.rochester.edu>

	* pandora_server_installer: Fixed a few bugs on non-Linux platforms
	
	* util/pandora_server, util/tentacle_serverd: Didn't work on Linux 
	(Ubuntu). Fixed she-bang.

2009-09-21  Sancho Lerena <slerena@artica.es>

	* pandora_server.spec: Fixed a few details.  

	* bin/pandora_server: Error handler needs to be reviewed, Enterprise 
	errors are too nasty :(

	* util/tentacle_serverd: Fixed LSB tags problems for RPM install

	* util/pandora_server: Fixed LSB tags problems and fix a bug who make
	script inusable :(

2009-09-18  Sancho Lerena <slerena@artica.es>

	*  util/pandora_db.pl: Minor improvements in script. Added 
	a switch for mode without compact.
